# huff-neo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml  deny.toml  foundry.toml  taplo.toml
.github/scripts/: check_wasm.sh  create-tag.js  make_package.sh  move-tag.js  prune-prereleases.js
.github/workflows/: book.yml  ci.yaml  docker-publish.yaml  release-wasm.yaml  release.yaml
book/: SUMMARY.md  cli.md  contribute.md  resources.md  robots.txt
book/developers/: overview.md  spans.md
book/get-started/: about-huff.md  comparison-to-huff-rs.md  comparison-to-huffc.md  compiling.md  getting-started.md  huff-by-example.md  installation.md  overview.md  project-quickstart.md
book/huff-language/: builtin-constants.md  builtin-functions.md  code-table.md  compile-time-conditionals.md  compile-time-loops.md  constants.md  custom-errors.md  functions-and-events.md  jump-labels.md  jump-tables.md  macros-and-functions.md  overview.md  tests.md
book/tutorial/: evm-basics.md  function-dispatching.md  hello-world.md  huff-testing.md  simple-storage.md  the-basics.md
crates/codegen/: Cargo.toml  README.md
crates/codegen/src/: lib.rs
crates/codegen/src/irgen/: arg_calls.rs  builtin_function.rs  constants.rs  mod.rs  statements.rs
crates/codegen/tests/: abigen.rs  churn.rs  constructor_args.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: huff_benchmark.rs
crates/core/src/: cache.rs  lib.rs
crates/core/tests/: aliased_imports.rs  alternative_constructor_macro.rs  alternative_main_macro.rs  arg_in_expressions.rs  arithmetic_expressions.rs  arithmetic_expressions_arg.rs  arithmetic_expressions_combined.rs  breaking_jumptable.rs  builtin_as_macro_arg.rs  builtin_in_constant_reference.rs  builtins.rs  builtins_in_conditionals.rs  circular_recursion.rs  code_table.rs  codegen_errors.rs  common.rs  compiling.rs  constants.rs  contract_size_limit.rs  embed_table.rs  erc20.rs  erc721.rs  evm_version.rs  exports_events.rs  file_resolution.rs  first_class_macros.rs  flattened_source.rs  for_loops.rs  free_storage_pointer.rs  functions.rs  gen_artifact.rs  if_else.rs  in_memory.rs  jump_relaxation.rs  jump_table.rs  keccak256_sha3_opcodes.rs  labels_in_nested_macros.rs  macro_invoc_args.rs  nested_jump_table.rs  nested_macro_argcalls.rs  (+11 more)
crates/js/: Cargo.toml  LICENSE  README.md
crates/js/src/: lib.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/src/: context_stack.rs  lib.rs
crates/lexer/tests/: arg_calls.rs  builtins.rs  comments.rs  constant.rs  context.rs  decorators.rs  eof.rs  evm_types.rs  for_loops.rs  fsp.rs  function_type.rs  hex.rs  if_else.rs  imports.rs  keywords.rs  labels.rs  noop.rs  numbers.rs  opcodes.rs  symbols.rs  tables.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs
crates/parser/tests/: abi.rs  arg_macro_invocation.rs  arithmetic_expressions.rs  breaking_param_invocation.rs  builtin_names.rs  constant.rs  error.rs  event.rs  for_loops.rs  function.rs  if_else.rs  imports.rs  labels.rs  macro.rs  noop.rs  opcodes.rs  storage_pointer_derivation.rs  table.rs
crates/test-runner/: Cargo.toml  README.md
crates/test-runner/src/: errors.rs  lib.rs  report.rs  runner.rs  types.rs
crates/test-runner/tests/: runner.rs
crates/tests/: Cargo.toml  README.md
crates/tests/src/: lib.rs  report.rs  runner.rs
crates/tests/src/inspectors/: cheats_inspector.rs
crates/tests/tests/: runner.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: abi.rs  artifact.rs  ast.rs  builtin_eval.rs  bytecode.rs  bytes_util.rs  error.rs  evm.rs  evm_version.rs  file_provider.rs  files.rs  io.rs  lexer_context.rs  lib.rs  opcodes.rs  push_value.rs  report.rs  scope.rs  shell.rs  sol_interface.rs  token.rs  types.rs  wasm.rs
crates/utils/src/ast/: abi.rs  huff.rs  mod.rs  span.rs
crates/utils/src/file/: file_provider.rs  file_source.rs  full_file_source.rs  mod.rs  remapper.rs  span.rs
crates/utils/tests/: abi.rs  byte_utils.rs  bytes.rs  evm_version.rs  file_source.rs  files.rs  remapper.rs  source_map.rs
examples/: UniSwap.huff  UniswapV2.huff
hnc-up/: README.md  hnc-up  install
huff-neo-up/: README.md  huff-neo-up  install
resources/erc20/: ERC20.huff
resources/erc721/: ERC721.huff
spec/grammar/: huff-neo.pest
