[workspace]
default-members = ["bin/hnc"]
exclude = [".github", "assets", "hnc-up"]
members = ["bin/hnc", "crates/codegen", "crates/core", "crates/js", "crates/lexer", "crates/parser", "crates/test-runner", "crates/utils"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/cakevm/huff-neo"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cakevm/huff-neo"
rust-version = "1.86"
version = "1.1.7"

[workspace.dependencies]
huff-neo-codegen = { path = "crates/codegen" }
huff-neo-core = { path = "crates/core" }
huff-neo-lexer = { path = "crates/lexer" }
huff-neo-parser = { path = "crates/parser" }
huff-neo-test-runner = { path = "crates/test-runner" }
huff-neo-utils = { path = "crates/utils" }

alloy-consensus = { version = "1.0.7", default-features = false }
alloy-dyn-abi = { version = "1.1.2", default-features = false }
alloy-evm = { version = "0.10.0", default-features = false }
alloy-primitives = { version = "1.1.2", default-features = false, features = ["std"] }

anvil = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
cfg-if = "1.0.0"
clap = { version = "4.5.32", features = ["derive"] }
comfy-table = "7.1.4"
eyre = "0.6.12"

foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
foundry-debugger = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "7e68208" }
hex = "0.4.3"
indexmap = "2.8.0"
itertools = "0.14.0"
js-sys = { version = "0.3.77" }
lazy_static = "1.5.0"
op-revm = { version = "5.0.0", default-features = false }
phf = { version = "0.11.3", features = ["macros"] }
rand = "0.9.0"
regex = "1.11.1"
revm = { version = "24.0.0", default-features = false, features = ["optional_no_base_fee"] }
shadow-rs = "1.0.1"
thiserror = "2.0.12"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", default-features = false, features = ["js", "v4"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.100"
yansi = "1.0.1"
# Pin version als workaround for: https://github.com/eira-fransham/crunchy/issues/13
crunchy = "=0.2.2"

# serde
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }

# dev
criterion = "0.6.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
rayon = "1.10.0"

[profile.test]
debug = "full"
incremental = true

[profile.release]
codegen-units = 32
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true # stripping of debuginfo

# https://deterministic.space/high-performance-rust.html
[profile.maxperf]
# set parallel codegen to 1 to increase performance
codegen-units = 1
inherits = "release"
lto = "fat"
