[workspace]
default-members = ["bin/hnc"]
exclude = [".github", "assets", "hnc-up"]
members = ["bin/hnc", "crates/codegen", "crates/core", "crates/js", "crates/lexer", "crates/parser", "crates/test-runner", "crates/utils"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/cakevm/huff-neo"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cakevm/huff-neo"
rust-version = "1.89"
version = "1.3.0"

[workspace.dependencies]
huff-neo-codegen = { path = "crates/codegen" }
huff-neo-core = { path = "crates/core" }
huff-neo-lexer = { path = "crates/lexer" }
huff-neo-parser = { path = "crates/parser" }
huff-neo-test-runner = { path = "crates/test-runner" }
huff-neo-utils = { path = "crates/utils" }

cfg-if = "1.0.1"
clap = { version = "4.5.44", features = ["derive"] }
comfy-table = "7.1.4"
eyre = "0.6.12"
indexmap = "2.10.0"
itertools = "0.14.0"
js-sys = { version = "0.3.77" }
lazy_static = "1.5.0"
phf = { version = "0.12.1", features = ["macros"] }
rand = "0.9.2"
regex = "1.11.1"

shadow-rs = "1.2.1"
thiserror = "2.0.14"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.18.0", default-features = false, features = ["js", "v4"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.100"
yansi = "1.0.1"

# alloy
alloy-dyn-abi = { version = "1.3.0", default-features = false }
alloy-evm = { version = "0.16.2", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["std"] }

# revm
op-revm = { version = "8.1.0", default-features = false }
revm = { version = "27.1.0", default-features = false, features = ["optional_no_base_fee"] }

# foundry
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-debugger = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "1ee320a" }

# serde
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = { version = "0.8.23", default-features = false, features = ["parse"] }

# dev
criterion = "0.6.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rayon = "1.10.0"

[profile.test]
debug = "full"
incremental = true

[profile.release]
codegen-units = 32
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true # stripping of debuginfo

# https://deterministic.space/high-performance-rust.html
[profile.maxperf]
# set parallel codegen to 1 to increase performance
codegen-units = 1
inherits = "release"
lto = "fat"
