[workspace]
default-members = ["bin/hnc"]
exclude = [".github", "assets", "hnc-up"]
members = ["bin/hnc", "crates/codegen", "crates/core", "crates/js", "crates/lexer", "crates/parser", "crates/test-runner", "crates/utils"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/foundry-rs/huff-neo"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/huff-neo"
rust-version = "1.89"
version = "1.3.9"

[workspace.dependencies]
huff-neo-codegen = { path = "crates/codegen" }
huff-neo-core = { path = "crates/core" }
huff-neo-lexer = { path = "crates/lexer" }
huff-neo-parser = { path = "crates/parser" }
huff-neo-test-runner = { path = "crates/test-runner" }
huff-neo-utils = { path = "crates/utils" }

cfg-if = "1.0.1"
clap = { version = "4.5.44", features = ["derive"] }
comfy-table = "7.2.0"
eyre = "0.6.12"
indexmap = "2.11.0"
itertools = "0.14.0"
js-sys = { version = "0.3.77" }
lazy_static = "1.5.0"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
regex = "1.11.1"

shadow-rs = "1.3.0"
thiserror = "2.0.14"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.100"
yansi = "1.0.1"

# alloy
alloy-dyn-abi = { version = "1.4.1", default-features = false }
alloy-evm = { version = "0.21.1", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false, features = ["std"] }

# revm
op-revm = { version = "10.0.0", default-features = false }
revm = { version = "29.0.0", default-features = false, features = ["optional_no_base_fee"] }

# foundry
anvil = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-compilers = { version = "0.19.5", default-features = false }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-debugger = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-evm-core = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-evm-networks = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }
foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "fd63a5d" }

# serde
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde"] }
tsify = { version = "0.5.5", features = ["js"] }

# dev
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
criterion = "0.7.0"
predicates = "3.1.3"
rayon = "1.10.0"


[profile.test]
debug = "full"
incremental = true

[profile.release]
codegen-units = 32
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true # stripping of debuginfo

# https://deterministic.space/high-performance-rust.html
[profile.maxperf]
# set parallel codegen to 1 to increase performance
codegen-units = 1
inherits = "release"
lto = "fat"
