[package]
name = "huff-neo-codegen"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = """
Bytecode Generation Crate for the Huff-Language
"""
keywords = ["bytecode", "compiler", "ethereum", "huff", "rust"]

[dependencies]
huff-neo-utils.workspace = true

alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
indexmap.workspace = true
regex.workspace = true
serde_json.workspace = true
tracing.workspace = true
