[package]
name = "huff-neo-js"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = """
Wasm Core Compiler Crate for the Huff-Language
"""
keywords = ["bytecode", "compiler", "evm", "huff", "rust"]

[lib]
crate-type = ["cdylib"]

[dependencies]
huff-neo-core.workspace = true
huff-neo-utils.workspace = true

serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
serde-wasm-bindgen.workspace = true

# HOTFIX: To get wasm compile. See: https://github.com/rustwasm/wasm-pack/issues/1501#issuecomment-2898697188
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
