[package]
name = "huff-neo-lexer"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = """
Lexical Analysis Crate for the Huff-Language
"""
keywords = ["bytecode", "compiler", "evm", "huff", "rust"]

[dependencies]
huff-neo-utils.workspace = true

lazy_static.workspace = true
regex.workspace = true
tracing.workspace = true
