[package]
name = "huff-neo-test-runner"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = """
A stripped down testing framework for the Huff language.
"""
keywords = ["bytecode", "compiler", "evm", "huff", "rust"]

[dependencies]
huff-neo-codegen.workspace = true
huff-neo-utils.workspace = true

alloy-primitives.workspace = true
anvil.workspace = true
comfy-table.workspace = true
foundry-common.workspace = true
foundry-debugger.workspace = true
foundry-evm.workspace = true
phf.workspace = true
revm.workspace = true
revm-inspectors.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
yansi.workspace = true
# Workaround to pin the version. See root Cargo.toml for more details.
crunchy.workspace = true
