[package]
name = "huff-neo-utils"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = """
Lexical Analysis Crate for the Huff-Language
"""
keywords = ["bytecode", "compiler", "evm", "huff", "rust"]

[dependencies]
alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
cfg-if.workspace = true
indexmap.workspace = true
itertools.workspace = true
lazy_static.workspace = true
phf.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys.workspace = true
